crates/agtrace-cli/tests/snapshots/help_snapshots__main_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Monitor and analyze sessions from Claude Code and Codex.
Works like 'top' + 'tail -f' for AI agents — 100% local, no cloud.

Usage: agtrace [OPTIONS] [COMMAND]

Commands:
  init      Initialize agtrace workspace (run once to get started)
  watch     Monitor live agents in real-time (multi-agent TUI)
  mcp       Enable agent self-reflection via MCP (Model Context Protocol)
  session   View and analyze past sessions
  provider  Configure log sources (Claude Code, Codex)
  sessions  List recent sessions (shorthand for 'session list')
  lab       Advanced analysis tools (grep, export, stats)
  index     Manage the session index (update, rebuild, vacuum)
  project   List all indexed projects
  doctor    Diagnose and troubleshoot log parsing issues
  pack      Package sessions for sharing or analysis
  demo      Run a live demo of the multi-agent TUI on a synthetic workspace
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository

Quick Start:
  agtrace init      # Run once to set up
  agtrace watch     # Monitor sessions in real-time

Learn more: https://github.com/lanegrid/agtrace
