crates/agtrace-cli/tests/snapshots/help_snapshots__pack_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Package sessions for sharing or analysis

Usage: agtrace pack [OPTIONS]

Options:
      --template <TEMPLATE>
          [default: compact]
          [possible values: compact, diagnose, tools]

      --limit <LIMIT>
          [default: 20]

  -h, --help
          Print help (see a summary with '-h')

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only
