crates/agtrace-cli/tests/snapshots/help_snapshots__project_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
List all indexed projects

Usage: agtrace project [OPTIONS] <COMMAND>

Commands:
  list  List all indexed projects
  help  Print this message or the help of the given subcommand(s)

Options:
      --data-dir <DATA_DIR>          Directory for agtrace database and configuration (defaults to XDG data directory, or AGTRACE_PATH env var)
      --format <FORMAT>              Output format for command results [default: plain] [possible values: plain, json]
      --log-level <LOG_LEVEL>        Logging verbosity level [default: info] [possible values: error, warn, info, debug, trace]
      --project-root <PROJECT_ROOT>  Override project root directory (defaults to current directory)
      --all-projects                 Operate on all indexed projects instead of current project only
  -h, --help                         Print help
