crates/agtrace-cli/tests/snapshots/help_snapshots__provider_detect_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Scan the system for installed AI agent tools and automatically configure their log paths.

Supported providers:
  - Claude Code (~/.claude/projects)
  - Codex (~/.codex/sessions)

Detected providers are saved to the configuration file.

Usage: agtrace provider detect [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Output Options:
      --quiet
          Minimal output (IDs only, for scripting)

      --compact
          Compact output (one line per item)

      --verbose
          Verbose output (all metadata)

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository
