crates/agtrace-cli/tests/snapshots/help_snapshots__provider_schema_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Usage: agtrace provider schema [OPTIONS] <PROVIDER>

Arguments:
  <PROVIDER>  

Options:
      --data-dir <DATA_DIR>          [default: ~/.agtrace]
      --format <FORMAT>              [default: text] [possible values: text, json, rust]
      --log-level <LOG_LEVEL>        [default: info] [possible values: error, warn, info, debug, trace]
      --project-root <PROJECT_ROOT>  
      --all-projects                 
  -h, --help                         Print help
