crates/agtrace-cli/tests/snapshots/help_snapshots__provider_set_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Manually add or update a provider configuration.

Use this when:
  - Auto-detection fails
  - Logs are in a non-standard location
  - You want to enable/disable a specific provider

Usage: agtrace provider set [OPTIONS] --log-root <LOG_ROOT> <PROVIDER>

Arguments:
  <PROVIDER>
          Provider name (claude_code, codex)

Options:
      --log-root <LOG_ROOT>
          Path to the provider's log directory

      --enable
          Enable this provider for indexing

      --disable
          Disable this provider from indexing

  -h, --help
          Print help (see a summary with '-h')

Output Options:
      --quiet
          Minimal output (IDs only, for scripting)

      --compact
          Compact output (one line per item)

      --verbose
          Verbose output (all metadata)

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository
