crates/agtrace-cli/tests/snapshots/help_snapshots__session_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
View and analyze past sessions

Usage: agtrace session [OPTIONS] <COMMAND>

Commands:
  list  Browse recent sessions with optional filtering
  show  Show detailed analysis of a specific session
  dump  Export session events as structured data for analysis
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only
