crates/agtrace-cli/tests/snapshots/help_snapshots__session_list_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
List recent AI agent sessions from the index.

Sessions are displayed with timestamps, snippets, and metadata.
Use filters to narrow down by provider, time range, or project.

Usage: agtrace session list [OPTIONS]

Options:
      --project-hash <PROJECT_HASH>
          Filter by project hash

      --provider <PROVIDER>
          Filter by provider
          
          [possible values: claude_code, codex]

      --limit <LIMIT>
          Maximum number of sessions to show
          
          [default: 10]

      --since <SINCE>
          Show sessions after this timestamp

      --until <UNTIL>
          Show sessions before this timestamp

      --no-auto-refresh
          Skip automatic index refresh before listing

      --all
          Include child sessions (subagents) in the list

      --format <FORMAT>
          Output format
          
          [default: plain]
          [possible values: plain, json]

  -h, --help
          Print help (see a summary with '-h')

Output Options:
      --quiet
          Minimal output (IDs only, for scripting)

      --compact
          Compact output (one line per item)

      --verbose
          Verbose output (all metadata)

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository

EXAMPLES:
  # List 10 most recent sessions
  agtrace session list --limit 10

  # Filter by provider
  agtrace session list --provider claude_code

  # Show sessions from the last 2 hours (ISO 8601 format)
  agtrace session list --since 2025-01-02T10:00:00Z

  # Show sessions from a specific time range
  agtrace session list --since 2025-01-01T00:00:00Z --until 2025-01-02T00:00:00Z

  # JSON output for scripting
  agtrace session list --format json --limit 5
